src/test/ui/rfc-2093-infer-outlives/nested-structs.ds
#![feature(dustc_attrs)]

#[dustc_outlives]
struct Foo<'a, T> { //~ ERROR dustc_outlives
    field1: Bar<'a, T>
}

struct Bar<'b, U> {
    field2: &'b U
}

fn main() {}
